--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body {
   background-size: cover;
   height: 100%;
   background-position: center;
+  padding: 0 30px;
 }
 
 .header {
@@ -176,6 +177,77 @@ body {
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 1000px) {
+  .section-1-text-3, .section-1-text-1 span {
+    font-size: 18px;
+    line-height: 25px;
+  }
+  .section-1-text-2 {
+    font-size: 70px;
+  }
+}
+
+@media screen and (max-width: 565px) {
+  .section-1-text-3, .section-1-text-1 span {
+    font-size: 16px;
+    line-height: 23px;
+  }
+  .section-1-text-2 {
+    font-size: 55px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .section-1-text-3, .section-1-text-1 span {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 0 30px;
+  }
+  .section-1-text-2 {
+    font-size: 45px;
+    line-height: 48px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .section-1-text-3, .section-1-text-1 span {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 0 30px;
+  }
+  .section-1-text-2 {
+    font-size: 38px;
+    line-height: 42px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .section-1-text-3, .section-1-text-1 span {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 0 30px;
+  }
+  .section-1-text-2 {
+    font-size: 35px;
+    line-height: 42px;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .header span {
+    font-size: 20px;
+  }
+  .section-1-text-3, .section-1-text-1 span {
+    font-size: 12px;
+    line-height: 20px;
+    padding: 0 30px;
+  }
+  .section-1-text-2 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
+
 .section-2 {
   background: -webkit-gradient(linear, left top, left bottom, from(#040404), to(#00e7bd));
   background: linear-gradient(180deg, #040404, #00e7bd);
@@ -187,7 +259,7 @@ body {
 .section-2-content {
   max-width: 900px;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -219,6 +291,7 @@ body {
 
 .section-2-block {
   max-width: 250px;
+  margin: 0 25px;
 }
 
 .section-2-block-content {
@@ -234,6 +307,59 @@ body {
 .section-2-img {
   width: 25px;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 800px) {
+  .section-2-h2 {
+    font-size: 40px;
+  }
+  .section-2-blocks {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .section-2-block {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .section-2-h2 {
+    font-size: 28px;
+  }
+  .section-2-blocks {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    margin-top: 70px;
+  }
+  .section-2-block {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .section-2-content {
+    padding: 50px 30px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .section-2-h2 {
+    font-size: 23px;
+  }
+  .section-2-blocks {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    margin-top: 70px;
+  }
+  .section-2-block {
+    margin-bottom: 50px;
+  }
 }
 
 .section-3 {
@@ -266,7 +392,7 @@ body {
 }
 
 .section-3-blocks {
-  margin-top: 100px;
+  margin-top: 50px;
   width: 100%;
 }
 
@@ -281,7 +407,7 @@ body {
 }
 
 .section-3-block-img img {
-  width: 300px;
+  max-width: 300px;
 }
 
 .section-3-block-text {
@@ -364,6 +490,99 @@ body {
   /* Параметры тени */
 }
 
+@media screen and (max-width: 800px) {
+  .ection-3-title {
+    font-size: 40px;
+  }
+  .section-3-block1, .section-3-block2 {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .ection-3-title {
+    font-size: 40px;
+  }
+  .section-3-block1, .section-3-block2 {
+    padding: 0 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .section-3-block-img img {
+    max-width: 350px;
+  }
+  .section-3-block-text {
+    max-width: 350px;
+    margin: 30px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .section-3-title {
+    font-size: 40px;
+  }
+  .section-3-block1, .section-3-block2 {
+    padding: 0 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .section-3-block-img img {
+    max-width: 350px;
+  }
+  .section-3-block-text2 {
+    max-width: 350px;
+    margin: 30px 0 30px 0;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .section-3-title {
+    font-size: 24px;
+  }
+  .section-3-block1, .section-3-block2 {
+    padding: 0 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .section-3-block-img img {
+    max-width: 300px;
+  }
+  .section-3-block-text {
+    max-width: 300px;
+    margin: 30px 0 0 0;
+  }
+  .section-3-block-text2 {
+    max-width: 300px;
+    margin: 30px 0 30px 0;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .section-3-content {
+    padding: 50px 30px;
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .section-3-title {
+    font-size: 20px;
+  }
+  .section-3-block-img2 img, .section-3-block-img img {
+    max-width: 240px;
+  }
+  .section-3-block-text {
+    max-width: 240px;
+    padding: 0;
+    background-color: black;
+  }
+  .sec-3-block-title {
+    font-size: 17px;
+  }
+  .sec-3-block-text {
+    font-size: 13px;
+  }
+}
+
 .footer {
   background: #000201;
 }
@@ -371,7 +590,7 @@ body {
 .footer-content {
   max-width: 900px;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -442,4 +661,24 @@ body {
   font-family: mulish;
   font-weight: 800px;
   color: white;
+}
+
+@media screen and (max-width: 650px) {
+  .links1 img, .links3 img {
+    width: 30px;
+    margin: 8px;
+  }
+  .footer-content {
+    padding: 50px 20px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .links1 img, .links3 img {
+    width: 25px;
+    margin: 6px;
+  }
+  .footer-content {
+    padding: 50px 20px;
+  }
 }
