--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
     font-family: "Exo Extra";
     src: url(../fonts/font-2/Exo-ExtraBold.ttf);
 }
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
 
 body{
     background-color: black;
@@ -37,9 +38,9 @@ body{
     display: flex;
     justify-content: center;
     max-height: 80px;
-    padding: 10px;
-    font-size: 30px;
-    font-family: "Exo semi";
+    padding: 15px;
+    font-size: 20px;
+    font-family: 'Secular One', sans-serif;
     text-transform: uppercase;
 
 }
@@ -67,7 +68,7 @@ body{
 
 }
 .section-1-text-2 {
-    font-family: "Exo extra";
+    font-family: 'Secular One', sans-serif;
     font-size: 90px;
     font-style: normal;
     font-weight: 900;
@@ -139,8 +140,8 @@ body{
         padding: 0 30px;
     }
     .section-1-text-2{
-        font-size: 35px;
-        line-height: 42px;
+        font-size: 38px;
+        line-height: 40px;
     }
 }
 @media screen and (max-width: 280px) {
@@ -248,7 +249,10 @@ body{
     }
 
     .section-2-block{
-        margin-bottom: 50px;
+        margin-bottom: 20px;
+    }
+    .section-2-content{
+        padding: 50px;
     }
 }
 // --------------------------------------------------------------- Section-3---------------------------------------------
@@ -420,6 +424,9 @@ body{
     .section-3-content{
         padding: 50px 30px;
     }
+    .section-3-block-text, .section-3-block-text2{
+        min-width: 300px;
+    }
 }
 @media screen and (max-width:280px) {
     .section-3-title{
@@ -438,6 +445,11 @@ body{
     }
     .sec-3-block-text{
         font-size: 13px;
+    }
+}
+@media screen and (max-width:375px) {
+    .section-3-blocks{
+        margin-top: 10px;
     }
 }
 // ------------------------- Footer --------------------
@@ -487,7 +499,7 @@ body{
     font-size: 16px;
     text-align: center;
     margin-top: 60px;
-    font-family: mulish;
+    font-family: 'Secular One', sans-serif;
     font-weight: 800px;
     color: white;
 } 
