--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 /*Обнуление*/
 @import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -146,8 +148,8 @@ body {
 }
 
 .section-1-text-1 span {
-  font-family: Gotham;
-  font-weight: 700;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
   line-height: 28px;
   text-align: center;
   font-size: 20px;
@@ -168,10 +170,10 @@ body {
 }
 
 .section-1-text-3 {
-  font-family: Gotham;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
   font-size: 20px;
   font-style: normal;
-  font-weight: 700;
   line-height: 28px;
   letter-spacing: 0em;
   text-align: center;
@@ -274,7 +276,7 @@ body {
 }
 
 .section-2-h2 {
-  font-family: Gotham;
+  font-family: 'Raleway', sans-serif;
   font-weight: 900;
   font-size: 45px;
 }
@@ -296,7 +298,7 @@ body {
 }
 
 .section-2-block-content {
-  font-family: Mulish;
+  font-family: 'Arimo', sans-serif;
   font-size: 17px;
   font-style: normal;
   font-weight: 400;
@@ -390,7 +392,7 @@ body {
 }
 
 .section-3-title {
-  font-family: Gotham;
+  font-family: 'Raleway', sans-serif;
   font-weight: 900;
   font-size: 45px;
 }
@@ -421,14 +423,14 @@ body {
 
 .sec-3-block-title {
   font-size: 25px;
-  font-family: mulish;
+  font-family: 'Arimo', sans-serif;
   font-weight: 700;
 }
 
 .sec-3-block-text {
   margin-top: 20px;
-  line-height: 16px;
-  font-family: mulish;
+  line-height: 18px;
+  font-family: 'Arimo', sans-serif;
   font-weight: 500;
 }
 
@@ -472,7 +474,7 @@ body {
   width: 150px;
   height: 40px;
   border-radius: 50px;
-  background-color: #00493C;
+  background-color: #001d18;
   color: white;
   -webkit-box-shadow: white 1 1 1;
           box-shadow: white 1 1 1;
