--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,8 @@
     src: url(../fonts/font-2/Exo-ExtraBold.ttf);
 }
 @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap');
 
 body{
     background-color: black;
@@ -58,8 +60,8 @@ body{
     justify-content: center;
 }
 .section-1-text-1 span{
-    font-family: Gotham;
-    font-weight: 700;
+    font-family: 'Raleway', sans-serif;;
+    font-weight: 500;
     line-height: 28px;
     text-align: center;
     font-size: 20px;
@@ -79,10 +81,10 @@ body{
     text-transform: uppercase;
 }
 .section-1-text-3 {
-    font-family: Gotham;
+    font-family: 'Raleway', sans-serif;;
+    font-weight: 500;
     font-size: 20px;
     font-style: normal;
-    font-weight: 700;
     line-height: 28px;
     letter-spacing: 0em;
     text-align: center;
@@ -175,7 +177,7 @@ body{
     align-items: center;
 }
 .section-2-h2 {
-    font-family: Gotham;
+    font-family: 'Raleway', sans-serif;
     font-weight: 900;
     font-size: 45px;
 }
@@ -190,7 +192,7 @@ body{
     margin: 0 25px;
 }
 .section-2-block-content {
-    font-family: Mulish;
+    font-family: 'Arimo', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 400;
@@ -272,7 +274,7 @@ body{
     align-items: center;
 }
 .section-3-title {
-    font-family: Gotham;
+    font-family: 'Raleway', sans-serif;
     font-weight: 900;
     font-size: 45px;
 }
@@ -297,13 +299,13 @@ body{
 }
 .sec-3-block-title {
     font-size: 25px;
-    font-family: mulish;
+    font-family: 'Arimo', sans-serif;
     font-weight: 700;
 }
 .sec-3-block-text {
     margin-top: 20px;
-    line-height: 16px;
-    font-family: mulish;
+    line-height: 18px;
+    font-family: 'Arimo', sans-serif;
     font-weight: 500;
 }
 .sec-3-block-button {
@@ -339,7 +341,7 @@ body{
         width: 150px;
         height: 40px;
         border-radius: 50px;
-        background-color: #00493C;
+        background-color: #001d18;
         color: white;
         box-shadow: white 1 1 1;
         font-family: mulish;
