--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,19 @@ body {
   }
 }
 
+@media screen and (max-width: 415px) {
+  .section-2 {
+    margin: 0;
+  }
+  .section-2-content {
+    padding: 50px 0 0 0;
+    margin: 0;
+  }
+  .section-2-block {
+    padding-bottom: 0px;
+  }
+}
+
 @media screen and (max-width: 380px) {
   .section-2-content {
     padding: 50px 30px;
@@ -542,6 +555,9 @@ body {
 }
 
 @media screen and (max-width: 460px) {
+  .section-3-content {
+    padding: 50px 0;
+  }
   .section-3-title {
     font-size: 24px;
   }
