--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,15 @@ body {
 .section-2-img {
   width: 25px;
   margin-bottom: 30px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.section-2-img:hover {
+  width: 30px;
+  margin-bottom: 30px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 @media screen and (max-width: 800px) {
@@ -427,6 +436,18 @@ body {
 
 .section-3-block-img img {
   max-width: 300px;
+  -webkit-box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.932);
+          box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.932);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.section-3-block-img img:hover {
+  max-width: 320px;
+  -webkit-box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.932);
+          box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.932);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .section-3-block-text {
@@ -461,6 +482,24 @@ body {
           box-shadow: white 1 1 1;
   font-family: mulish;
   font-size: 12px;
+}
+
+.sec-3-block-button, .sec-3-block-button2 {
+  margin-top: 15px;
+}
+
+.sec-3-block-button button:hover, .sec-3-block-button2 button:hover {
+  width: 155px;
+  height: 45px;
+  border-radius: 50px;
+  background-color: #001D18;
+  color: white;
+  -webkit-box-shadow: white 1 1 1;
+          box-shadow: white 1 1 1;
+  font-family: mulish;
+  font-size: 12px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .section-3-block2 {
