--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@ body{
     color: white;
 }
 .section-content {
-    background: linear-gradient(135deg, rgba(0, 0, 0, 0.521), rgba(0, 0, 0, 0.527)), url(../img/UVnCB.jpg);
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.521), rgba(0, 0, 0, 0.527)), url(../img/pexels-photo-257894.jpeg);
     background-size: cover;
     height: 100%;
     background-position: center;
@@ -163,9 +163,9 @@ body{
 // -------------------------------------------------------------- 2 Блок чем я занимаюсь ---------------------------------------------
 
 .section-2{
-    background: linear-gradient(180deg, #040404, #00e7bd);
+    background: white;
     max-height: 750px;
-    color: white;
+    color: black;
     text-align: center;
 }
 .section-2-content {
@@ -205,6 +205,7 @@ body{
     width: 25px;
     margin-bottom: 30px;
     transition: 0.5s;
+
 }
 .section-2-img:hover{
     width: 30px;
@@ -279,9 +280,8 @@ body{
 // --------------------------------------------------------------- Section-3---------------------------------------------
 
 .section-3 {
-    background: linear-gradient(0deg, #040404, #00e7bd);
-    color: white;
-    background-color: saddlebrown;
+    background: white;
+    color: black;
 }
 .section-3-content {
 
@@ -311,6 +311,8 @@ body{
         max-width: 300px;
         box-shadow: 0 0 20px 2px rgba(255, 255, 255, 0.932);
         transition: 0.5s;
+        border: 2px solid rgb(0, 0, 0);
+        border-radius: 10px;
     }
 }
 .section-3-block-img{
@@ -337,16 +339,19 @@ body{
     font-weight: 500;
 }
 .sec-3-block-button {
+
     margin-top: 15px;
     button{
         width: 150px;
         height: 40px;
         border-radius: 50px;
-        background-color: #001D18;
-        color: white;
-        box-shadow: white 1 1 1;
+        background-color: #ffffff;
+        color: rgb(0, 0, 0);
+        box-shadow: rgb(255, 255, 255) 1 1 1;
         font-family: mulish;
         font-size: 12px;
+        border: 1px solid black;
+        transition: 0.3s;
     }
 }
 .sec-3-block-button, .sec-3-block-button2 {
@@ -354,19 +359,14 @@ body{
     button:hover{
         width: 155px;
         height: 45px;
-        border-radius: 50px;
-        background-color: #001D18;
-        color: white;
-        box-shadow: white 1 1 1;
-        font-family: mulish;
-        font-size: 12px;
-        transition: 0.3s;
+        transition: 0.3;
     }
 }
 .section-3-block2 {
     display: flex;
     margin-top: 50px;
     justify-content: center;
+    
 }
 .section-3-block-text2{
     max-width: 350px;
@@ -379,28 +379,29 @@ body{
         width: 150px;
         height: 40px;
         border-radius: 50px;
-        background-color: #001d18;
-        color: white;
+        background-color: #ffffff;
+        color: rgb(0, 0, 0);
         box-shadow: white 1 1 1;
         font-family: mulish;
         font-size: 12px;
+        border: 1px solid black;
+        transition: 0.3;
     }
 }
 
 .sec-3-block-button button:hover{
 
-    background-color: #001310;
+    background-color: #ffffff;
     box-shadow: 1px 1px 15px rgba(255, 255, 255, 0.596); /* Параметры тени */
     
 }
 .sec-3-block-button2 button:hover{
 
-    background-color: #00493C;
+    background-color: #ffffff;
     box-shadow: 1px 1px 15px rgba(255, 255, 255, 0.596); /* Параметры тени */
-    
 }
 @media screen and (max-width:800px) {
-    .ection-3-title{
+    .section-3-title{
         font-size: 40px;
     }
     .section-3-block1, .section-3-block2{
