--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,6 @@ h1, h2, h3, h4, h5, h6 {
   src: url(../fonts/font-2/Exo-ExtraBold.ttf);
 }
 
-body {
-  background-color: black;
-}
-
 .hero {
   height: 100vh;
   color: white;
@@ -528,8 +524,8 @@ body {
   font-family: mulish;
   font-size: 12px;
   border: 1px solid black;
-  -webkit-transition: 0.3;
-  transition: 0.3;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .sec-3-block-button button:hover {
@@ -657,7 +653,7 @@ body {
 .footer-content {
   max-width: 900px;
   margin: 0 auto;
-  padding: 100px 30px;
+  padding: 30px 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -690,7 +686,7 @@ body {
 }
 
 .links1 img {
-  width: 40px;
+  width: 30px;
   margin: 10px;
 }
 
@@ -704,7 +700,7 @@ body {
 }
 
 .links2 img {
-  width: 50px;
+  width: 30px;
 }
 
 .links3 {
@@ -717,14 +713,14 @@ body {
 }
 
 .links3 img {
-  width: 40px;
+  width: 30px;
   margin: 10px;
 }
 
 .footer-name {
   font-size: 16px;
   text-align: center;
-  margin-top: 60px;
+  margin-top: 30px;
   font-family: 'Secular One', sans-serif;
   font-weight: 800px;
   color: white;
