--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap');
 
 body{
-    background-color: black;
+    // background-color: black;
 }
 // --------------------------- Header ----------------------
 
@@ -339,7 +339,6 @@ body{
     font-weight: 500;
 }
 .sec-3-block-button {
-
     margin-top: 15px;
     button{
         width: 150px;
@@ -385,7 +384,7 @@ body{
         font-family: mulish;
         font-size: 12px;
         border: 1px solid black;
-        transition: 0.3;
+        transition: 0.3s;
     }
 }
 
@@ -505,7 +504,7 @@ body{
 .footer-content {
     max-width: 900px;
     margin: 0 auto;
-    padding: 100px 30px;
+    padding: 30px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -517,7 +516,7 @@ body{
 }
 .links1 {
     img{
-        width: 40px;
+        width: 30px;
         margin: 10px;
     }
     display: flex;
@@ -526,14 +525,14 @@ body{
 
 .links2 {
     img{
-        width: 50px;
+        width: 30px;
     }
     display: flex;
     align-items: center;
 }
 .links3 {
     img{
-        width: 40px;
+        width: 30px;
         margin: 10px;
     }
 
@@ -543,7 +542,7 @@ body{
 .footer-name{
     font-size: 16px;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 30px;
     font-family: 'Secular One', sans-serif;
     font-weight: 800px;
     color: white;
