--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ body {
 }
 
 .section-content {
-  background: linear-gradient(135deg, rgba(0, 0, 0, 0.521), rgba(0, 0, 0, 0.527)), url(../img/head2.jpeg);
+  background: linear-gradient(135deg, rgba(0, 0, 0, 0.521), rgba(0, 0, 0, 0.527)), url(../img/head3-1.jpg);
   background-size: cover;
   height: 100%;
   background-position: center;
@@ -266,7 +266,7 @@ body {
 .section-2-content {
   max-width: 900px;
   margin: 0 auto;
-  padding: 100px 20px;
+  padding: 70px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
